--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@
 .banner-text{
     width: 700px;
     margin-bottom: 100px;
+    text-align: justify;
 }
 .banner-text h1{
     color: white;
@@ -101,6 +102,105 @@
 
 }
 
+/* about-me Styles */
+.about-me-container{
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 3rem 8.5rem 3rem 8.5rem;
+    background:#1f2937;
+}
+
+.button-container{
+    text-align: center;
+}
+
+.about-me-content{
+    justify-content: space-between;
+}
+
+
+.button-container{
+    margin-bottom: 100px;
+}
+
+.btn-primary{
+    background-color: #2c3748;
+    color: rgba(255, 255, 255, 0.5);
+    border: none;
+    padding: 12px 25px;
+    border-radius: 20px;
+    
+}
+
+
+.about-me-image{
+    max-width: 600px;
+}
+
+
+.about-me-image img{
+    width: 100%;
+    width: 100%;
+    /* border-bottom: 25px solid #374151; */
+    box-shadow: -50px -30px 30px #374151;
+    box-sizing: border-box;
+}
+
+.about-me-text{
+    width: 700px;
+
+}
+
+.about-me-text h2{
+    font-size: 2.25rem;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 1.25rem;
+
+}
+
+.description2{
+    color: rgb(143, 154, 175);
+    font-size: 1.2rem;
+    font-weight: 400; 
+    margin-bottom: 1.25rem;
+    text-align: justify;
+
+}
+
+.about{
+    list-style: square;
+    flex-wrap: wrap;
+    
+}
+
+.about li{
+    color: rgb(143, 154, 175);
+    font-size: 1.2rem;
+    font-weight: 400; 
+    margin-bottom: 1.25rem;
+    text-align: justify;
+    margin-right: 100px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width:431px) {
 
@@ -136,10 +236,31 @@
 }
 
 
+/* About-me container Styles */
 
+.about-me-container{
+    padding: 1rem 2rem 1rem 2rem;
 
+}
 
+.about-me-content{
+   flex-direction: column;
+}
 
+.button-container{
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+
+.about-me-image{
+    max-width: 600px;
+    margin-bottom: 3rem;
+}
+
+.about-me-text{
+    width: 90%;
+
+}
 
 
 
