--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,10 @@
     margin-bottom: 100px;
 }
 .name h3{
-    color: white;
+    color: transparent;
+    font-family: monospace;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
     font-size: 2rem;
     font-weight: 900;
 }
@@ -59,7 +62,10 @@
     text-align: justify;
 }
 .banner-text h1{
-    color: white;
+    color: transparent;
+    font-family: monospace;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
     font-size: 4rem;
     font-weight: 700;
     margin-bottom: 20px;
@@ -82,7 +88,10 @@
 
 .social-media a{
     font-size: 2.5rem;
-    color: white;
+    color: transparent;
+    font-family: monospace;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
     margin-right: 30px;
 
 }
@@ -95,7 +104,7 @@
 .banner-image img{
     width: 100%;
     /* border-bottom: 25px solid #374151; */
-    box-shadow: 50px 30px 30px #374151;
+    box-shadow: 50px 30px 30px #6219bc19;
     box-sizing: border-box;
 
 
@@ -126,7 +135,7 @@
 .btn-primary{
     background-color: #2c3748;
     color: rgba(255, 255, 255, 0.5);
-    border: none;
+    border: 4px solid  #5603BD;
     padding: 12px 25px;
     border-radius: 20px;
     
@@ -153,7 +162,10 @@
 
 .about-me-text h2{
     font-size: 2.25rem;
-    color: white;
+    font-family: monospace;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
+    color: transparent;
     font-weight: 700;
     margin-bottom: 1.25rem;
 
@@ -186,11 +198,11 @@
 .skills-container{
         max-width: 1440px;
         margin: 0 auto;
-        padding: 3rem 8.5rem;
+        padding: 3rem 8.5rem 5rem 8.5rem;
         background: #030712;
 }
 .skill-text{
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
 }
 
 .btn-container{
@@ -200,9 +212,13 @@
 
 .skill-text h3{
     font-size: 1.5rem;
-    color: rgb(143, 154, 175);
     font-weight: 400;
     text-align: center;
+    font-family: monospace;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
+    color: transparent;
+
 }
 
 .skill-content{
@@ -226,9 +242,12 @@
 .experience-header h3{
         margin-top: 20px;
         font-size: 1.5rem;
-        color: rgb(143, 154, 175);
-        font-weight: 400;
-        text-align: center;                    
+    font-weight: 400;
+    font-family: monospace;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
+    color: transparent;
+    text-align: center;                    
 }
 
 .experience-card{
@@ -362,25 +381,34 @@
 .work-text h3{
     margin-top: 20px;
     font-size: 2.5rem;
-    color: white;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 1.25rem;
+    color: transparent;
+    font-family: cursive;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
 }
 
 .work-text2 h3{
     margin-top: 20px;
     font-size: 2.5rem;
-    color: white;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 1.25rem;
+    color: transparent;
+    font-family: cursive;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
 }
 
 .work-text3 h3{
     margin-top: 20px;
     font-size: 2.5rem;
-    color: white;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 1.25rem;
+    color: transparent;
+    font-family: cursive;
+    background: linear-gradient(90deg, #5603BD,  #FF0097);
+    background-clip: text;
 }
 
 
